style: make header and navbar responsive

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <header class="header">
         <nav class="nav-bar">
             <!-- Company Logo -->
-            <figure class="company-logo">
+            <figure class="company-logo-desktop">
                 <img src="https://crushingit.tech/hackathon-assets/shopify-icon-desktop.svg" alt="Shopify Logo">
+            </figure>
+            <figure class="company-logo-mobile">
+                <img src="https://crushingit.tech/hackathon-assets/shopify-icon.svg" alt="Shopify Logo">
             </figure>
 
             <!-- Search Input -->
