feat: build trial options section and make resposive

--- a/index.html
+++ b/index.html
@@ -55,5 +55,20 @@
             </div>
         </nav>
     </header>
+
+    <!-- Main Section -->
+    <main class="main">
+        <section class="page-content-wrapper">
+            <div class="trial-popup">
+                <p>Extend your trial for $1/month for 3 months on select plans.</p>
+                <div class="trial-options">
+                    <button class="plan-btn">Select a plan</button>
+                    <figure class="remove-popup-wrapper">
+                        <img src="./images/remove-popup-icon.svg" alt="remove pop up icon">
+                    </figure>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
