feat: add functionality to remove trial popup

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
             <div class="user-info">
             <!-- Notifications -->
                 <div class="notification-wrapper">
-                    <figure>
+                    <button>
                         <img src="./images/notification-icon.svg" alt="Notification Icon">
-                    </figure>
+                    </button>
                 </div>
             
             <!-- User Details -->
-                <div class="userInfo-wrapper">
+                <button class="userInfo-wrapper">
                     <p class="username">Davii Collections</p>
                     <span class="name-initials">DC</span>
-                </div>
+                </button>
             </div>
         </nav>
     </header>
@@ -59,6 +59,7 @@
     <!-- Main Section -->
     <main class="main">
         <section class="page-content-wrapper">
+            <!-- Trial Popup -->
             <div class="trial-popup">
                 <p>Extend your trial for $1/month for 3 months on select plans.</p>
                 <div class="trial-options">
@@ -68,7 +69,12 @@
                     </figure>
                 </div>
             </div>
+
+
+            
         </section>
     </main>
+
+    <script src="./app.js"></script>
 </body>
 </html>
