feat: build setup guide accordion and add basic functionality

--- a/index.html
+++ b/index.html
@@ -71,7 +71,31 @@
             </div>
 
 
-            
+            <!-- Setup Guide -->
+            <div class="setup-guide-accordion">
+                <div class="setup-guide-list-wrapper">
+                    <div class="setup-guide-label">
+                        <div class="setup-guide-description">
+                            <h3>Setup guide</h3>
+                            <p>Use this personalized guide to get your store up and running.</p>
+
+                    <!-- Progress Bar -->
+                            <div class="form-progress">
+                                <p>1 / 5 completed</p>
+                                <div class="progress-indicator">
+                                    <div class="progress-bar-container">
+                                        <div class="progress-bar" id="progress-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="dropdown-icon-container">
+                            <img class="dropdown-icon" src="https://crushingit.tech/hackathon-assets/icon-arrow-down.svg" alt="arrow-down">
+                        </button>
+                    </div>
+                    <div class="setup-guide-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis qui ipsam deserunt eveniet inventore, consequatur quaerat consectetur porro quibusdam officia magni, nobis dolor perspiciatis nulla soluta, eos voluptas minima saepe.</div>
+                </div>
+            </div>
         </section>
     </main>
 
