fix: improve ux by opening accordion when user clicks any element

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                 <div class="setup-guide-list-wrapper">
                     <div class="setup-guide-label">
                         <div class="setup-guide-description">
-                            <h3>Setup guide</h3>
-                            <p>Use this personalized guide to get your store up and running.</p>
+                            <h3 class="description-header">Setup guide</h3>
+                            <p class="content-description">Use this personalized guide to get your store up and running.</p>
 
                     <!-- Progress Bar -->
                             <div class="form-progress">
-                                <p>1 / 5 completed</p>
+                                <p class="progress-count">1 / 5 completed</p>
                                 <div class="progress-indicator">
                                     <div class="progress-bar-container">
                                         <div class="progress-bar" id="progress-bar"></div>
