feat: add functionality to checkbox

--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
                         <li class="setup-guide-content list-wrapper">
                             <div class="label">
                                 <!-- <div class="checkbox-container"> -->
-                                <figure class="checkbox empty">
-                                    <img src="./images/empty-checkbox.svg" alt="unchecked checbox">
+                                <figure class="checkbox-container">
+                                    <img class="checkbox empty" src="./images/empty-checkbox.svg" alt="unchecked checbox">
+                                    <img class="checkbox checked" src="./images/checked-checkbox.svg" alt="checked checkbox">
                                 </figure>
                                 <!-- </div> -->
     
